[package]
name = "dwallet-primitives"
version = "0.1.0"
description = "Shared types and utilities for dWallet"
authors = ["dWallet Team"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.10", default-features = false, features = ["derive"] }
sp-core = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
sp-runtime = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'scale-info/std',
    'sp-core/std',
    'sp-runtime/std',
]
