[package]
name = "dwallet-runtime"
version = "0.1.0"
description = "dWallet Native Blockchain Runtime"
authors = ["dWallet Team"]
edition = "2021"
license = "Apache-2.0"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6", default-features = false, features = ["derive"] }
scale-info = { version = "2.10", default-features = false, features = ["derive"] }

# Substrate
frame-support = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
frame-system = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }
frame-executive = { git = "https://github.com/paritytech/polkadot-sdk.git", branch = "master", default-features = false }

# Runtime modules (will be added as we implement pallets)
# pallet-dwt-token = { path = "../pallets/pallet-dwt-token", default-features = false }

[features]
default = ['std']
std = [
    'codec/std',
    'scale-info/std',
    'frame-support/std',
    'frame-system/std',
    'frame-executive/std',
]
